sets dangerfullserverkill to false by default